Add ITs for verifying auto-provisioning device status
The integration tests have been extended to verify the device status
properties of auto-provisioned devices.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>